float_eq/tests/derive_tests/assert_float_eq/assert_float_eq_generic.stderr
error: This trait does not yet support derive for generic types.
 --> $DIR/assert_float_eq_generic.rs:4:36
  |
4 |     Debug, Clone, Copy, PartialEq, FloatEqUlpsTol, FloatEq, FloatEqDebugUlpsDiff, AssertFloatEq,
  |                                    ^^^^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: This trait does not yet support derive for generic types.
 --> $DIR/assert_float_eq_generic.rs:4:52
  |
4 |     Debug, Clone, Copy, PartialEq, FloatEqUlpsTol, FloatEq, FloatEqDebugUlpsDiff, AssertFloatEq,
  |                                                    ^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: This trait does not yet support derive for generic types.
 --> $DIR/assert_float_eq_generic.rs:4:61
  |
4 |     Debug, Clone, Copy, PartialEq, FloatEqUlpsTol, FloatEq, FloatEqDebugUlpsDiff, AssertFloatEq,
  |                                                             ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: This trait does not yet support derive for generic types.
 --> $DIR/assert_float_eq_generic.rs:4:83
  |
4 |     Debug, Clone, Copy, PartialEq, FloatEqUlpsTol, FloatEq, FloatEqDebugUlpsDiff, AssertFloatEq,
  |                                                                                   ^^^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
