float_eq/tests/derive_tests/assert_float_eq/assert_float_eq_generic.rs
use float_eq::{AssertFloatEq, FloatEq, FloatEqDebugUlpsDiff, FloatEqUlpsTol};

#[derive(
    Debug, Clone, Copy, PartialEq, FloatEqUlpsTol, FloatEq, FloatEqDebugUlpsDiff, AssertFloatEq,
)]
struct MyComplexUlps<T> {
    re: T,
    im: T,
}

fn main() {}
